# smorty

./: .gitignore  Cargo.toml  QA_FINAL_REPORT.md  README.md  config.toml.example  config.yaml.example  docker-compose.yaml
.github/workflows/: ci.yml
abi/: FeeManagerV3_Beets.json  FeeManagerV3_v2.json
ir/FeeManagerV3_Beets_Sonic_ETHUSD6h/: FeeUpdated.json  PoolUpdated.json
production/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose-prod.yaml
production/nginx/: nginx.conf
production/nginx/conf.d/: smorty.conf
src/: ai.rs  cli.rs  config.rs  constants.rs  indexer.rs  ir.rs  ir_generator.rs  lib.rs  main.rs  migration.rs  migration_generator.rs  schema_diff.rs  schema_state.rs  server.rs
tests/: README.md
tests/e2e/: full_flow_test.rs  health_test.rs  main.rs  record_rpc.rs
tests/e2e/fixtures/: weth_spec_ir.json  weth_transfers_endpoint.json
tests/e2e/fixtures/cassettes/rpc/: eth_blockNumber.json  eth_getBlockByNumber.json  eth_getLogs_weth.json
tests/integration/: endpoint_test.rs  ir_generation_test.rs  main.rs  recording.rs
tests/integration/fixtures/cassettes/: endpoint_cross_contract_whales.json  endpoint_swap_volume_hourly.json  endpoint_v3_swaps_by_pool.json  endpoint_weth_transfers.json  uni_delegate_votes.json  uni_transfer.json  v3_factory_pool_created.json  v3_pool_mint.json  v3_pool_swap.json  weth_deposit.json  weth_transfer.json
