[package]
name = "smorty"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[[bin]]
name = "smorty"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Database with migrations
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
    "migrate"
] }

# Ethereum client
alloy = { version = "1.0.41", features = ["full", "node-bindings"] }

# Web framework
axum = { version = "0.8.6", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# OpenAPI/Swagger documentation
utoipa = { version = "5.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"

# AI integration
async-openai = "0.30.1"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

[dev-dependencies]
tempfile = "3.15"